<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/menu_search" 
        android:title="@string/menu_search" 
        android:icon="@drawable/ic_menu_search" 
        android:showAsAction="ifRoom|collapseActionView" 
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh" 
        android:showAsAction="ifRoom"
        android:actionLayout="@layout/action_view_refresh"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings" 
        android:menuCategory="alternative"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about" 
        android:menuCategory="alternative"/>
</menu>
